[package]
name = "dioxus-maplibre"
version = "0.0.1"
edition = "2024"
description = "MapLibre GL JS wrapper for Dioxus 0.7"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nevaberry/dioxus-maplibre"
keywords = ["dioxus", "maplibre", "maps", "gis", "wasm"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
dioxus = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }
tracing = "0.1"

[features]
default = []
web = ["dioxus/web"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
